# QuaryLite

./: .gitignore  CONTRIBUTING.md  LAUNCH_CHECKLIST.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx  monacoSetup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CenterPane.tsx  ChatPane.tsx  ConversationHistory.tsx  ExplorerPane.tsx  LeftSidebar.tsx  RelationshipPane.tsx  RightSidebar.tsx  SettingsModal.tsx  ShortcutSheet.tsx  Toolbar.tsx
src/lib/: aiStream.ts  utils.ts
src/store/: index.ts
