[package]
name = "querylite"
version = "0.1.0"
description = "A fast SQLite IDE with AI-powered SQL generation"
authors = ["QuaryLite"]
license = "MIT"
repository = "https://github.com/querylite/querylite"
homepage = "https://github.com/querylite/querylite"
readme = "../README.md"
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "querylite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

